--- a/src/index.pug
+++ b/src/index.pug
@@ -106,7 +106,7 @@ html(lang="en-CA")
 						)
 					h2 Meet Mark
 					p
-						| Born and raised as a third generation in East Vancouver, Mark Wiens is a proud father, and lifelong community advocate.
+						| Born and raised as a third-generation East Vancouver resident, Mark Wiens is a proud father, and lifelong community advocate.
 						| Rooted in Vancouver East, he’s spent his life supporting local families, newcomers, and small businesses—building stronger, more connected neighbourhoods across the riding.
 					p
 						| Mark understands the challenges facing our community: the rising cost of living, deepening inequality, and a housing system that’s leaving too many behind.
