Add "drive voters" option

--- a/src/partial/join-form.pug
+++ b/src/partial/join-form.pug
@@ -16,6 +16,7 @@ form.styled(netlify netlify-honeypot="truly-important-information" name="join-my
 		select#join-position(name="position" required)
 			option(value="" selected disabled) Select an option
 			option(value="Door knocking") Door knocking
+			option(value="Drive voters") Drive voters
 			option(value="Phone banking") Phone banking
 			option(value="Sign placement") Sign placement
 			option(value="Leadership position") Leadership position
