--- a/src/partial/head.pug
+++ b/src/partial/head.pug
@@ -4,23 +4,23 @@ meta(name="viewport" content="width=device-width, initial-scale=1")
 // Styles
 link(rel="preconnect" href="https://fonts.googleapis.com")
 link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
-link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Oswald&display=swap")
+link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap")
+link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Zhi+Mang+Xing&text=马克·韦恩斯&display=swap")
 style
 	include ../style.css
-meta(name="theme-color" content="#d71920")
+meta(name="theme-color" content="#d9320d")
 
 // Meta
-title Mark Wiens, Liberal Party candidate for Vancouver East
-meta(name="description" content="Mark is focused on tackling key issues in Vancouver East, such as housing, safety, and economic stability. With a strong community background, he’s committed to bringing real change.")
-meta(property="og:title" content="Mark Wiens, Liberal Party candidate for Vancouver East")
+title Mark Wiens for Richmond City Council
+meta(name="description" content="Mark Wiens, a Richmond father and community leader, is running for City Council to build a thriving, inclusive, and accountable city.")
+meta(property="og:title" content="Mark Wiens for Richmond City Council")
 meta(property="og:type" content="website")
 meta(property="og:url" content="https://www.votemarkwiens.ca")
 meta(property="og:image" content=imgixSrc("share-image.png", 1200, { q: 90 }))
-meta(property="og:image:alt" content="Elect Mark Wiens for Vancouver East. Mark Wiens stands wearing a suit and tie, smiling at the camera.")
+meta(property="og:image:alt" content="Mark Wiens, a Richmond father and community leader, is running for City Council to build a thriving, inclusive, and accountable city.")
 
 // Icon
 link(rel="icon" href="/favicon.ico" sizes="any")
-link(rel="icon" href="/icon.svg" type="image/svg+xml")
 
 // App JS
 script(src="/app.js" defer)
