--- a/src/style.css
+++ b/src/style.css
@@ -590,7 +590,8 @@ dl.grid {
 	background-color: var(--main-red-shade-2);
 	color: white;
 	padding-block: calc(var(--padding-section) / 2);
-	font-size: 1.5rem;
+	font-size: 1.2rem;
+	font-size: clamp(1rem, 3vw, 1.5rem);
 	text-align: center;
 	font-weight: 700;
 }
