Change alt text of market 2 image

--- a/src/index.pug
+++ b/src/index.pug
@@ -59,7 +59,7 @@ html(lang="en-CA")
 						)
 						+img("mark-at-market-2.jpg", [4098, 5464], [140, 280, 420], { crop: "faces", ar: "3:4" })(
 							id="mark-at-market"
-							alt="Mark stands and smiles in passageway of Richmond Public Market"
+							alt="Mark stands and smiles downstairs in Richmond Public Market"
 							sizes="auto, 37.3333vw"
 							loading="lazy"
 						)
