Alter request sign wording

--- a/src/index.pug
+++ b/src/index.pug
@@ -117,7 +117,7 @@ html(lang="en-CA")
 					.prose
 						h2 Request a sign
 						p
-							| Show your support for real change in Richmond by having a lawn sign placed at your home.
+							| Show your support for real change in Richmond by having a lawn sign placed at your home once the campaign period starts in summer 2026.
 							| Our team will confirm with you once your information has been submitted.
 							| Thank you for your support!
 					include partial/sign-form.pug
