Change authorization wording

--- a/src/partial/footer.pug
+++ b/src/partial/footer.pug
@@ -14,6 +14,6 @@
 					include socials.pug
 
 	p#fineprint
-		| Authorized by the official agent of Mark Wiens
+		| Authorized by Mark Wiens – #[a(href="mailto:mark@votemarkwiens.ca") mark@votemarkwiens.ca]
 		br
 		| © 2025
